kubernetes/users-directory/deployments/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-directory-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: users-directory
